# agent_platform_api/models/__init__.py
@@ -31,6 +31,10 @@ from .platform import (
     ApiModelUpdateResponse,
     ApiPlatformCapabilitiesResponse,
     ApiPlatformControlCapabilitiesResponse,
+    ApiPlatformModelCatalogEntryResponse,
+    ApiPlatformModelCatalogResponse,
+    ApiPlatformModelCatalogSourceModelResponse,
+    ApiPlatformModelCatalogSourceResponse,
     ApiPlatformRuntimeCapabilitiesResponse,
     ApiPlatformSdkCapabilitiesResponse,
     ApiPlatformToolListResponse,
@@ -95,6 +99,10 @@ __all__ = [
     "ApiPersistentToolResponse",
     "ApiPlatformCapabilitiesResponse",
     "ApiPlatformControlCapabilitiesResponse",
+    "ApiPlatformModelCatalogEntryResponse",
+    "ApiPlatformModelCatalogResponse",
+    "ApiPlatformModelCatalogSourceModelResponse",
+    "ApiPlatformModelCatalogSourceResponse",
     "ApiPlatformRuntimeCapabilitiesResponse",
     "ApiPlatformSdkCapabilitiesResponse",
     "ApiPlatformToolListResponse",
